PUT operations should return 201 or 204 on success (#347)
Strictly speaking a PUT operation should return a 201
when it creates a new resource or 204 when it updates
an existing resource. PUTS are not expected to return 200.

Fixes #286.
